==> benhuckell/Team7Robot/RobotMain/include/stm32/HardwareTimer.cpp <==
#include "HardwareTimer.h"
#include CHIP_PERIPHERAL_INCLUDE

void HardwareTimer::resume() {
    bool hasInterrupt = false;
    for(size_t i=0; i<sizeof(callbacks) / sizeof(callbacks[0]); i++) {
        if (callbacks[i] != NULL) {
            hasInterrupt = true;
            break;
        }
    }

#ifdef TIM1
    if (handle.Instance == TIM1) {
        __HAL_RCC_TIM1_CLK_ENABLE();
        interruptTimers[0] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM1_UP_TIM10_IRQn, 0, 0);
            HAL_NVIC_EnableIRQ(TIM1_UP_TIM10_IRQn);

            HAL_NVIC_SetPriority(TIM1_CC_IRQn, 0, 0);
            HAL_NVIC_EnableIRQ(TIM1_CC_IRQn);
        }

        TIM_ClockConfigTypeDef sClockSourceConfig;
        sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
        HAL_TIM_ConfigClockSource(&handle, &sClockSourceConfig);

        TIM_MasterConfigTypeDef sMasterConfig;
        sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
          sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
          HAL_TIMEx_MasterConfigSynchronization(&handle, &sMasterConfig);

        handle.Init.RepetitionCounter = 0;
    }
#endif

#ifdef TIM2
    if (handle.Instance == TIM2) {
        __HAL_RCC_TIM2_CLK_ENABLE();
        pwm_callback_func = []() { handleInterrupt(interruptTimers[1]); };
        interruptTimers[1] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM2_IRQn, 0, 0);
            HAL_NVIC_EnableIRQ(TIM2_IRQn);
        }
    }
#endif

#ifdef TIM3
    if (handle.Instance == TIM3) {
        __HAL_RCC_TIM3_CLK_ENABLE();
        interruptTimers[2] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM3_IRQn, 0, 0);
            HAL_NVIC_EnableIRQ(TIM3_IRQn);
        }
    }
#endif

#ifdef TIM4
    if (handle.Instance == TIM4) {
        __HAL_RCC_TIM4_CLK_ENABLE();
        interruptTimers[3] = this;
        if (hasInterrupt) {
            HAL_NVIC_SetPriority(TIM4_IRQn, 0, 0);
            HAL_NVIC_EnableIRQ(TIM4_IRQn);
        }
    }
#endif

    handle.Init.CounterMode = TIM_COUNTERMODE_UP;
    handle.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
    handle.Init.RepetitionCounter = 0;

    HAL_TIM_Base_Init(&handle);

    if (callbacks[0] != NULL) {
        HAL_TIM_Base_Start_IT(&handle);
    } else {

        HAL_TIM_Base_Start(&handle);
    }

    resumeChannel(1, TIM_CHANNEL_1);
    resumeChannel(2, TIM_CHANNEL_2);
    resumeChannel(3, TIM_CHANNEL_3);
    resumeChannel(4, TIM_CHANNEL_4);
}

void HardwareTimer::setMode(int channel, TIMER_MODES mode, uint8_t pin) {
    int pinMode = PIN_NOT_USED;
    int pull = GPIO_NOPULL;

    switch(mode) {
        case TIMER_PWM:
            channelOC[channel - 1].OCMode = TIM_OCMODE_PWM1;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_TIMING;
            break;

        case TIMER_OUTPUT_COMPARE_ACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_ACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_INACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_ACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_TOGGLE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_TOGGLE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_PWM1:
            channelOC[channel - 1].OCMode = TIM_OCMODE_PWM1;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_PWM2:
            channelOC[channel - 1].OCMode = TIM_OCMODE_PWM2;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_FORCED_ACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_FORCED_ACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_OUTPUT_COMPARE_FORCED_INACTIVE:
            channelOC[channel - 1].OCMode = TIM_OCMODE_FORCED_INACTIVE;
            pinMode = GPIO_MODE_AF_PP;
            break;

        case TIMER_INPUT_CAPTURE_RISING:
            channelIC[channel - 1].ICPolarity = TIM_INPUTCHANNELPOLARITY_RISING;
            pinMode = GPIO_MODE_AF_PP;
            pull = GPIO_PULLDOWN;
            break;

        case TIMER_INPUT_CAPTURE_FALLING:
            channelIC[channel - 1].ICPolarity = TIM_INPUTCHANNELPOLARITY_FALLING;
            pinMode = GPIO_MODE_AF_PP;
            pull = GPIO_PULLDOWN;
            break;
    }

    if (pinMode != PIN_NOT_USED) {
        for(int i=0; i<tim_pin_list_size; i++) {
            if (isSameChannel(channel, tim_pin_list[i].signalType)) {

                if (pin == TIMER_DEFAULT_PIN ||
                        (variant_pin_list[pin].port == tim_pin_list[i].port && variant_pin_list[pin].pin_mask == tim_pin_list[i].pinMask)) {

                    stm32GpioClockEnable(tim_pin_list[i].port);

                    GPIO_InitTypeDef GPIO_InitStruct;
                    GPIO_InitStruct.Pin = tim_pin_list[i].pinMask;
                    GPIO_InitStruct.Mode = pinMode;
                    GPIO_InitStruct.Pull = pull;
                    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;

                    #ifdef STM32F1
                        tim_pin_list[i].alternate();
                    #else
                        GPIO_InitStruct.Alternate = tim_pin_list[i].alternate;
                    #endif

                    HAL_GPIO_Init(tim_pin_list[i].port, &GPIO_InitStruct);

                    return;
                }
            }
        }
    }
}

uint32_t HardwareTimer::getCompare(int channel) {
    if (channel == 1) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_1);
    if (channel == 2) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_2);
    if (channel == 3) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_3);
    if (channel == 4) return __HAL_TIM_GET_COMPARE(&handle, TIM_CHANNEL_4);
    return 0;
}

void HardwareTimer::refresh() {
    HAL_TIM_GenerateEvent(&handle, TIM_EVENTSOURCE_UPDATE);
}
